--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Log In
           </div>
           <div class="login-input-parts">
-            <input class="login-input" type="email" placeholder="yourEmail@Address.com" />
+            <input class="login-input" type="email" placeholder="yourEmail@address.com" />
             <input class="login-input" type="password" placeholder="Your Password" />
             <input class="login-input button" type="button" value="Log In" />
           </div>
