--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="login-title">
             Log In
           </div>
-          <div class="login-input-parts">
+          <div class="login-input-zone">
             <input class="login-input" type="email" placeholder="yourEmail@address.com" />
             <input class="login-input" type="password" placeholder="Your Password" />
             <input class="login-input button" type="button" value="Log In" />
