--- a/navbar.html
+++ b/navbar.html
@@ -6,13 +6,23 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
-    <title>Navbar</title>
+    <link rel="stylesheet" href="css/navbar2.css" />
+    <title>NavbarTutorial</title>
   </head>
   <body>
-    <nav id="navbar" class="navbar">
-      <div class="logo">
-        <img src="img/logo.svg" alt="" />
-      </div>
-    </nav>
+    <header>
+      <!-- <a href="#"><img class="logo" src="img/logo.svg" alt="Logo" /></a> -->
+      <img class="logo" src="img/logo.svg" alt="Logo" />
+      <nav class="navbar">
+        <ul class="links">
+          <li><a href="#">News</a></li>
+          <li><a href="#">Series</a></li>
+          <li><a href="#">Films</a></li>
+          <li><a href="#">Favourite</a></li>
+          <li><input class="search-input" type="text" name="" placeholder="Search" /></li>
+        </ul>
+      </nav>
+      <a class="link-out" href="#"><button>Sign Out</button></a>
+    </header>
   </body>
 </html>
