Solucionado problema href e img para situar el navbar

--- a/navbar.html
+++ b/navbar.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <header>
-      <!-- <a href="#"><img class="logo" src="img/logo.svg" alt="Logo" /></a> -->
-      <img class="logo" src="img/logo.svg" alt="Logo" />
+      <!-- <img class="logo" src="img/logo.svg" alt="Logo" /> -->
+      <a class="logo" href="#"><img class="logo-img" src="img/logo.svg" alt="Logo" /></a>
       <nav class="navbar">
         <ul class="links">
           <li><a href="#">News</a></li>
@@ -24,5 +24,58 @@
       </nav>
       <a class="link-out" href="#"><button>Sign Out</button></a>
     </header>
+
+    <!-- <div class="containerText">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
+        Nostrum labore rem ad modi maiores beatae?
+      </p>
+    </div> -->
   </body>
 </html>
