tratantdo de comparar navbar con el de clase

--- a/navbar.html
+++ b/navbar.html
@@ -7,75 +7,101 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/navbar2.css" />
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>NavbarTutorial</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- <img class="logo" src="img/logo.svg" alt="Logo" /> -->
       <a class="logo" href="#"><img class="logo-img" src="img/logo.svg" alt="Logo" /></a>
-      <nav class="navbar">
+      <nav id="navbar" class="navbar">
         <ul class="links">
           <li><a href="#">News</a></li>
           <li><a href="#">Series</a></li>
           <li><a href="#">Films</a></li>
           <li><a href="#">Favourite</a></li>
-          <li><input class="search-input" type="text" name="" placeholder="Search" /></li>
+          <li>
+            <input class="search-input" type="text" name="" placeholder="Search" />
+          </li>
         </ul>
       </nav>
       <a class="link-out" href="#"><button>Sign Out</button></a>
     </header>
 
-    <!-- <div class="containerText">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-        reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse suscipit.
-        Nostrum labore rem ad modi maiores beatae?
-      </p>
-    </div> -->
+    <main class="main">
+      <div class="container">
+        <h1>Probando navbar:</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+      </div>
+    </main>
   </body>
 </html>
