--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="css/log-in.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Log In</title>
   </head>
   <body>
