navbar pantalla extensa...

--- a/navbar.html
+++ b/navbar.html
@@ -6,29 +6,36 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
-    <link rel="stylesheet" href="css/navbar2.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>NavbarTutorial</title>
   </head>
   <body>
     <header class="header">
-      <!-- <img class="logo" src="img/logo.svg" alt="Logo" /> -->
-      <a class="logo" href="#"><img class="logo-img" src="img/logo.svg" alt="Logo" /></a>
       <nav id="navbar" class="navbar">
-        <ul class="links">
-          <li><a href="#">News</a></li>
-          <li><a href="#">Series</a></li>
-          <li><a href="#">Films</a></li>
-          <li><a href="#">Favourite</a></li>
-          <li>
+        <span class="logo">
+          <a href="/">
+            <img class="logo-img" src="img/logo.svg" alt="Logo" />
+          </a>
+        </span>
+
+        <ul class="navbar-list">
+          <li class="navbar-item"><a href="#News">News</a></li>
+          <li class="navbar-item"><a href="#Series">Series</a></li>
+          <li class="navbar-item"><a href="#Films">Films</a></li>
+          <li class="navbar-item"><a href="#Favourite">Favourite</a></li>
+          <li class="navbar-item">
             <input class="search-input" type="text" name="" placeholder="Search" />
+          </li>
+          <li class="navbar-item">
+            <a href="./pages/pageNotFound.html">
+              <button class="link-button">Sign Out</button>
+            </a>
           </li>
         </ul>
       </nav>
-      <a class="link-out" href="#"><button>Sign Out</button></a>
     </header>
 
-    <main class="main">
+    <!-- <main class="main">
       <div class="container">
         <h1>Probando navbar:</h1>
         <p>
@@ -101,7 +108,47 @@
           reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
           suscipit. Nostrum labore rem ad modi maiores beatae?
         </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
       </div>
-    </main>
+    </main> -->
   </body>
 </html>
