--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
           <div class="login-input-zone">
             <input class="login-input" type="email" placeholder="yourEmail@address.com" />
             <input class="login-input" type="password" placeholder="Your Password" />
-            <input class="login-input button" type="button" value="Log In" />
+            <a href="/navbar.html"
+              ><input class="login-input button" type="button" value="Log In"
+            /></a>
           </div>
           <div class="login-forgot">
-            Forgot password?
+            Forgot password?</a>
           </div>
         </div>
-        <div class="login-signup">Don't have an account? <a href="#">Sign Up</a></div>
+        <div class="login-signup">
+          Don't have an account? <a href="/pages/pageNotFound.html">Sign Up</a>
+        </div>
       </div>
     </section>
   </body>
