--- a/index.html
+++ b/index.html
@@ -4,33 +4,151 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="css/log-in.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Log In</title>
   </head>
   <body>
-    <section class="login-general">
+    <header class="header">
+      <nav id="navbar" class="navbar">
+        <span class="logo">
+          <a href="/">
+            <img class="logo-img" src="img/logo.svg" alt="Logo" />
+          </a>
+        </span>
+
+        <ul class="navbar-list">
+          <li class="navbar-item"><a href="#News">News</a></li>
+          <li class="navbar-item"><a href="#Series">Series</a></li>
+          <li class="navbar-item"><a href="#Films">Films</a></li>
+          <li class="navbar-item"><a href="#Favourite">Favourite</a></li>
+          <li class="navbar-item">
+            <input class="search-input" type="text" name="" placeholder="Search" />
+          </li>
+          <li class="navbar-item">
+            <a href="./pages/pageNotFound.html">
+              <button class="link-button">Sign Out</button>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main">
       <div class="container">
-        <div class="login-form">
-          <div class="login-title">
-            Log In
-          </div>
-          <div class="login-input-zone">
-            <input class="login-input" type="email" placeholder="yourEmail@address.com" />
-            <input class="login-input" type="password" placeholder="Your Password" />
-            <a href="/navbar.html"
-              ><input class="login-input button" type="button" value="Log In"
-            /></a>
-          </div>
-          <div class="login-forgot">
-            Forgot password?</a>
-          </div>
-        </div>
-        <div class="login-signup">
-          Don't have an account? <a href="/pages/pageNotFound.html">Sign Up</a>
-        </div>
+        <h1>Probando navbar:</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
+          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
+          suscipit. Nostrum labore rem ad modi maiores beatae?
+        </p>
       </div>
-    </section>
+    </main>
   </body>
 </html>
