pagina 404 terminada, refactorizado de paginas componente individuales en pages

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="css/log-in.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Log In</title>
   </head>
@@ -19,7 +19,7 @@
           <div class="login-input-zone">
             <input class="login-input" type="email" placeholder="yourEmail@address.com" />
             <input class="login-input" type="password" placeholder="Your Password" />
-            <a href="/navbar.html"
+            <a href="../pages/navbar.html"
               ><input class="login-input button" type="button" value="Log In"
             /></a>
           </div>
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="login-signup">
-          Don't have an account? <a href="/pages/pageNotFound.html">Sign Up</a>
+          Don't have an account? <a href="../pages/pageNotFound.html">Sign Up</a>
         </div>
       </div>
     </section>
