--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/navbar.css" />
-    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>NavbarTutorial</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
       <nav id="navbar" class="navbar">
         <span class="logo">
           <a href="/">
-            <img class="logo-img" src="img/logo.svg" alt="Logo" />
+            <img class="logo-img" src="../img/logo.svg" alt="Logo" />
           </a>
         </span>
 
@@ -27,7 +27,7 @@
             <input class="search-input" type="text" name="" placeholder="Search" />
           </li>
           <li class="navbar-item">
-            <a href="./pages/pageNotFound.html">
+            <a href="../pages/pageNotFound.html">
               <button class="link-button">Sign Out</button>
             </a>
           </li>
