--- a/pages/pageNotFound.html
+++ b/pages/pageNotFound.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/pageNotFound.css" />
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Page Not Found</title>
   </head>
   <body>
-    <h1>404 Página No Encontrada</h1>
+    <div class="container">
+      <img src="../img/404.svg" alt="Web No disponible" />
+      <h1>Error! 404 Page Not Found 😵</h1>
+      <h3>Go to index Press 👉 <a href="../index.html">Home</a></h3>
+    </div>
   </body>
 </html>
