cambiado enlace de vuelta por error 404

--- a/pages/pageNotFound.html
+++ b/pages/pageNotFound.html
@@ -13,7 +13,7 @@
     <div class="container">
       <img src="../img/404.svg" alt="Web No disponible" />
       <h1>Error! 404 Page Not Found 😵</h1>
-      <h3>Go to index Press 👉 <a href="../index.html">Home</a></h3>
+      <h3>Go to index Press 👉 <a href="../pages/login.html">Home</a></h3>
     </div>
   </body>
 </html>
