--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
-    <title>Log In</title>
+    <title>Rootdevs</title>
   </head>
   <body>
     <header class="header">
@@ -20,7 +20,6 @@
 
         <ul class="navbar-list">
           <li class="navbar-item"><a href="#News">News</a></li>
-          <li class="navbar-item"><a href="#Series">Series</a></li>
           <li class="navbar-item"><a href="#Films">Films</a></li>
           <li class="navbar-item"><a href="#Favourite">Favourite</a></li>
           <li class="navbar-item">
