--- a/pages/pageNotFound.html
+++ b/pages/pageNotFound.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+< !DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/pageNotFound.css" />
-    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
-    <title>Page Not Found</title>
+    <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+    <title>404 Page Not Found</title>
   </head>
   <body>
     <div class="container">
       <img src="../img/404.svg" alt="Web No disponible" />
-      <h1>Error! 404 Page Not Found 😵</h1>
-      <h3>Go to index Press 👉 <a href="../pages/login.html">Home</a></h3>
+      <h1>Error ! 404 Page Not Found 😵</h1>
+      <h3>
+        Go to index Press <strong class="emphasis"> ➡ </strong>
+        <a href="../pages/login.html">Home</a>
+      </h3>
     </div>
   </body>
 </html>
