inciando card del layout grid

--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/filmGrid.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-    <title>Film Grid</title>
+    <title>Films Grid</title>
   </head>
   <body>
     <header class="header">
@@ -33,5 +34,19 @@
         </ul>
       </nav>
     </header>
+
+    <section class="section-gridfilms">
+      <a href="" class="gridfilms">
+        <figure class="gridfilms-image">
+          <img src="../img/films/futurama.jpg" alt="" />
+        </figure>
+        <span class="gridfilms-description">
+          <p>
+            <span class="gridfilms-comments">🌟</span>
+            <span class="gridfilms-fav">ver</span>
+          </p>
+        </span>
+      </a>
+    </section>
   </body>
 </html>
