usando span como metodo alternativo

--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -36,14 +36,21 @@
     </header>
 
     <section class="section-gridfilms">
-      <a href="" class="gridfilms">
+      <a href="#" class="gridfilms">
         <figure class="gridfilms-image">
           <img src="../img/films/futurama.jpg" alt="" />
         </figure>
         <span class="gridfilms-description">
           <p>
-            <span class="gridfilms-comments">🌟</span>
-            <span class="gridfilms-fav">ver</span>
+            <span class="gridfilms-fav">✅✔️</span>
+            <span class="gridfilms-comments">
+              <span class="comments-age">Movie rating by age +16</span>
+              <span class="comments-description">Description:</span>
+              <span class="comments-synopsis">
+                Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
+                the Planet Express crew...
+              </span>
+            </span>
           </p>
         </span>
       </a>
