posicionamiento de span descriptivos sobre card correctos

--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -44,7 +44,10 @@
           <p>
             <span class="gridfilms-fav">✅✔️</span>
             <span class="gridfilms-comments">
-              <span class="comments-age">Movie rating by age +16</span>
+              <span class="comments-title">
+                Futurama: The Beast with a Billion Backs (2008)
+              </span>
+              <span class="comments-age">Movie rating: Age +16</span>
               <span class="comments-description">Description:</span>
               <span class="comments-synopsis">
                 Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
