--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -39,7 +39,12 @@
       </nav>
     </header>
     <section class="section-gridfilms">
-      <!-- <a href="#" class="gridfilms">
+      <div class="container-gridfilms">
+        <h1 class="section-title">Films:</h1>
+      </div>
+
+      <div class="container-gridfilms">
+        <!-- <a href="#" class="gridfilms">
         <figure class="gridfilms-image">
           <img src="../img/films/madMaxNew.jpg" alt="Picture of Star Wars" />
         </figure>
@@ -62,29 +67,30 @@
         </span>
       </a> -->
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/inside.jpg" alt="Picture of The Pursuit" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✔️</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Inside Out (2015)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/inside.jpg" alt="Picture of The Pursuit" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✔️</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Inside Out (2015)
+                </span>
+                <span class="comments-age">Movie rating: Age +16</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  Growing up can be a bumpy road, and it's no exception for Riley, who is
+                  uprooted from her Midwest life when her father starts a new job in San
+                  Francisco. Like all of us, Riley is guided by her emotions - Joy, Fear,
+                  Anger, Disgust and Sadness...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +16</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                Growing up can be a bumpy road, and it's no exception for Riley, who is
-                uprooted from her Midwest life when her father starts a new job in San
-                Francisco. Like all of us, Riley is guided by her emotions - Joy, Fear,
-                Anger, Disgust and Sadness...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
+      </div>
     </section>
   </body>
 </html>
