--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -40,233 +40,239 @@
     </header>
 
     <section class="section-gridfilms">
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✔️</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Futurama: The Beast with a Billion Backs (2008)
+      <div class="container-gridfilms">
+        <h1 class="section-title">Films:</h1>
+      </div>
+      <div class="container-gridfilms">
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✔️</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Futurama: The Beast with a Billion Backs (2008)
+                </span>
+                <span class="comments-age">Movie rating: Age +16</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  Fresh off ripping space-time a new one at the end of "Bender's Big
+                  Score," the Planet Express crew...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +16</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
-                the Planet Express crew...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✅</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Batman Beyond: Return of the Joker (2000)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✅</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Batman Beyond: Return of the Joker (2000)
+                </span>
+                <span class="comments-age">Movie rating: Age +8</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  The Joker is back with a vengeance, and Gotham's newest Dark Knight
+                  needs answers as he stands alone to face Gotham's most infamous Clown
+                  Prince of Crime.
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +8</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                The Joker is back with a vengeance, and Gotham's newest Dark Knight needs
-                answers as he stands alone to face Gotham's most infamous Clown Prince of
-                Crime.
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✔️</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Star Wars Episode IV A New Hope(1977)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✔️</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Star Wars Episode IV A New Hope(1977)
+                </span>
+                <span class="comments-age">Movie rating: Age +16</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  Princess Leia is captured and held hostage by the evil Imperial forces
+                  in their effort to take over the galactic Empire...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +16</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                Princess Leia is captured and held hostage by the evil Imperial forces in
-                their effort to take over the galactic Empire...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✔️</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                The Pursuit of Happyness (2006)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✔️</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  The Pursuit of Happyness (2006)
+                </span>
+                <span class="comments-age">Movie rating: Age +16</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  Based on a true story about a man named Christopher Gardner, who has
+                  invested heavily in a device known as a "Bone Density scanner"...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +16</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                Based on a true story about a man named Christopher Gardner, who has
-                invested heavily in a device known as a "Bone Density scanner"...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✅</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Harry Potter and the Philosopher's Stone (2001)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✅</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Harry Potter and the Philosopher's Stone (2001)
+                </span>
+                <span class="comments-age">Movie rating: Age +8</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  Harry Potter has lived under the stairs at his aunt and uncle's house
+                  his whole life. But on his 11th birthday, he learns he's a powerful
+                  wizard -- with a place waiting for him at the Hogwarts School of
+                  Witchcraft and Wizardry...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +8</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                Harry Potter has lived under the stairs at his aunt and uncle's house his
-                whole life. But on his 11th birthday, he learns he's a powerful wizard --
-                with a place waiting for him at the Hogwarts School of Witchcraft and
-                Wizardry...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/reservoirDogs.jpg" alt="Picture of Reservoir Dogs" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✅</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Reservoir Dogs (1992)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/reservoirDogs.jpg" alt="Picture of Reservoir Dogs" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✅</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Reservoir Dogs (1992)
+                </span>
+                <span class="comments-age">Movie rating: Age +18</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  A botched robbery indicates a police informant, and the pressure mounts
+                  in the aftermath at a warehouse. Crime begets violence as the
+                  survivors...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +18</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                A botched robbery indicates a police informant, and the pressure mounts in
-                the aftermath at a warehouse. Crime begets violence as the survivors...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/theWolf.jpg" alt="Picture of The Wolf" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✅</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                The Wolf of Wall Street (2013)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/theWolf.jpg" alt="Picture of The Wolf" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✅</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  The Wolf of Wall Street (2013)
+                </span>
+                <span class="comments-age">Movie rating: Age +18</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  A New York stockbroker refuses to cooperate in a large securities fraud
+                  case involving corruption on Wall Street, corporate banking world and
+                  mob infiltration. Based on Jordan Belfort's autobiography.
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +18</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                A New York stockbroker refuses to cooperate in a large securities fraud
-                case involving corruption on Wall Street, corporate banking world and mob
-                infiltration. Based on Jordan Belfort's autobiography.
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✔️</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Pulp Fiction (1994)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✔️</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Pulp Fiction (1994)
+                </span>
+                <span class="comments-age">Movie rating: Age +18</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  A burger-loving hit man, his philosophical partner, a drug-addled
+                  gangster's moll and a washed-up boxer converge in this sprawling,
+                  comedic crime caper. Their adventures unfurl in three stories that
+                  ingeniously trip back and forth in time.
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +18</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                A burger-loving hit man, his philosophical partner, a drug-addled
-                gangster's moll and a washed-up boxer converge in this sprawling, comedic
-                crime caper. Their adventures unfurl in three stories that ingeniously
-                trip back and forth in time.
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✅</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                The Book of Eli (2010)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✅</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  The Book of Eli (2010)
+                </span>
+                <span class="comments-age">Movie rating: Age +16</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  A post-apocalyptic tale, in which a lone man fights his way across
+                  America in order to protect a sacred book that holds the secrets to
+                  saving humankind.
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +16</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                A post-apocalyptic tale, in which a lone man fights his way across America
-                in order to protect a sacred book that holds the secrets to saving
-                humankind.
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
 
-      <a href="#" class="gridfilms">
-        <figure class="gridfilms-image">
-          <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
-        </figure>
-        <span class="gridfilms-description">
-          <p>
-            <span class="gridfilms-fav">✔️</span>
-            <span class="gridfilms-comments">
-              <span class="comments-title">
-                Rocky (1976)
+        <a href="#" class="gridfilms">
+          <figure class="gridfilms-image">
+            <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
+          </figure>
+          <span class="gridfilms-description">
+            <p>
+              <span class="gridfilms-fav">✔️</span>
+              <span class="gridfilms-comments">
+                <span class="comments-title">
+                  Rocky (1976)
+                </span>
+                <span class="comments-age">Movie rating: Age +16</span>
+                <span class="comments-description">Description:</span>
+                <span class="comments-synopsis">
+                  When world heavyweight boxing champ Apollo Creed wants to give an
+                  unknown fighter a shot at the title as a publicity stunt, his handlers
+                  pick palooka Rocky Balboa, an uneducated collector...
+                </span>
               </span>
-              <span class="comments-age">Movie rating: Age +16</span>
-              <span class="comments-description">Description:</span>
-              <span class="comments-synopsis">
-                When world heavyweight boxing champ Apollo Creed wants to give an unknown
-                fighter a shot at the title as a publicity stunt, his handlers pick
-                palooka Rocky Balboa, an uneducated collector...
-              </span>
-            </span>
-          </p>
-        </span>
-      </a>
+            </p>
+          </span>
+        </a>
+      </div>
     </section>
   </body>
 </html>
