actualizada cabecera archivo index

--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
       <nav id="navbar" class="navbar">
         <span class="logo">
           <a href="/">
-            <img class="logo-img" src="img/logo.svg" alt="Logo" />
+            <img class="logo-img" src="../img/logo.svg" alt="Logo" />
           </a>
         </span>
 
         <ul class="navbar-list">
-          <li class="navbar-item"><a href="#News">News</a></li>
-          <li class="navbar-item"><a href="#Films">Films</a></li>
-          <li class="navbar-item"><a href="#Favourite">Favourite</a></li>
+          <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+          <li class="navbar-item">
+            <a href="../pages/filmGrid.html">Films</a>
+          </li>
+          <li class="navbar-item">
+            <a href="../pages/filmGridFavourite.html">Favourite</a>
+          </li>
           <li class="navbar-item">
             <input class="search-input" type="text" name="" placeholder="Search" />
           </li>
           <li class="navbar-item">
-            <a href="./pages/pageNotFound.html">
+            <a href="../pages/pageNotFound.html">
               <button class="link-button">Sign Out</button>
             </a>
           </li>
